- enable pop-up menu for all gnuplot graphs under Linux/unix
  and add facilty to print graphs directly under gnome
- make DVI viewer configurable and make "latex view" functions
  so they should work on win32
- add inclusive inequality operators '>=' and '<=' to genr
- fix bug in genr: operator priority was not being fully respected
  in all cases

04/01/2002 version 0.992
- bounds checking for critical values look-up; also add this
  as a regular gretlcli command, "critical"
- add sanity checks for regression commands and ADF test
- add importer plugins for Gnumeric and Excel workbooks
- add "Append data" menu item
- fix bug in "Create data set" functions

03/20/2002 version 0.991
- fix several "out of bounds" bugs kindly reported by Tavis Barr
- streamline the online help system
- in GUI, allow deletion of any variable (popup menu)
- go to a two-dimensional data array
- get the data status indicator working better when the nulldata
  command is used
- add menu items to set missing value codes for a particular
  series or the entire data set, and add "setmiss" command
- changing or clearing the data set now closes all model and
  stats windows (prevents crashes and garbage)
- add scalar datatype
- add progress indicator for reading/writing large data files
- add a refresh to the remote databases window after down-
  loading and installing a database
- add handling for daily data (probably needs more work)
- update to gnuplot 3.7.2 in win32 distribution
- prepare the program sources for internationalization via
  GNU gettext; add a blank .pot file to the source package

02/27/2002 version 0.99
- add option for HTTP proxy when contacting gretl data server
- fix bugs in drag and drop under Windows
- fix crashing bug when trying to save a data file with over
  (about) 120 variables
- fix bug in editing new data header info
- add mechanism to record sample when estimating a model, so
  that subsequent tests on that model can be referred to the same 
  sample